--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <a href="https://github.com/josefrans">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/josefranss">
+          <a href="https://twitter.com/JoseFransHDZ">
             <i class="fab fa-twitter"></i>
           </a>
           <a href="https://web.facebook.com/JoseFransHDZ">
@@ -167,7 +167,7 @@
             <i class="fab fa-youtube"></i>
           </a>
 
-          <a href="https://www.instagram.com/jose_franciscohd">
+          <a href="https://www.instagram.com/josefranciscohdoficial">
             <i class="fab fa-instagram"></i>
           </a>
 
