--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           <a href="josefrnas703@gmail.com"></a>
         </div>
         <p class="lead mb-5">Soy un aprendiz continuo, en un mundo donde constantemente 
-          se esta actualizando, es dificil siguir los pasos de los avances tecnologícos,
+          se esta actualizando, es dificil seguir los pasos de los avances tecnologícos,
            tendras que esforsarte para seguir comprendiendo el mundo donde vivimos.
            
           Me gusta hacer cosas divertidas e interactivas,
