--- a/index.html
+++ b/index.html
@@ -50,8 +50,11 @@
 
 <div id="cajacookies">
 <p>
-Éste sitio web usa cookies<a href="politica.html">info</a>
-<button onclick="aceptarCookies()" class="pull-right"> ok</button>
+Éste sitio web recupilara toda tu información, cookes propias y de 
+terceros con el finés técnicos, analícos para crear un perfin 
+elebarado apartir de tus hábitos en todas las redes.<a href="politica.html">Politica de Cookes</a>
+<button onclick="aceptarCookies()" class="pull-right">ACEPTAR TODAS</button>
+<button onclick="aceptarCookies()" class="pull-right"> CONFIGURAR</button>
 </p>
 </div>
 
@@ -71,7 +74,7 @@
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
       <span class="d-block d-lg-none">JOSE</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="jose.jpg" alt="">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/jose.jpg" alt="">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -101,7 +104,7 @@
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="contacto.html">Contacto</a>
         </li>
-        <p class="copyright">© Jose 2021 Todos los derechos reservados.</p>
+        <p class="copyright">© Jose 2020 Todos los derechos reservados.</p>
       </ul>
      
       
