--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <div id="cajacookies">
 <p>
 Éste sitio web recupilara toda tu información, cookes propias y de 
-terceros con el finés técnicos, analícos para crear un perfil 
+terceros con el finés técnicos, para crear un perfil 
 elebarado apartir de tus hábitos en todas las redes.<a href="politica.html">Politica de Cookes</a>
 <button onclick="aceptarCookies()" class="pull-right">ACEPTAR TODAS</button>
 <button onclick="aceptarCookies()" class="pull-right"> CONFIGURAR</button>
